--- a/src/components/sections/Hero.css
+++ b/src/components/sections/Hero.css
@@ -1,7 +1,7 @@
 .hero {
   display: flex;
   height: 47rem;
-  align-items: flex-start;
+  align-items: flex-end;
   background-color: var(--Primary-Navy);
 }
 
